# behavior-to-weights

./: .dockerignore  .env.example  .gitignore  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
configs/datasets/: synthetic.yaml  tinystories.yaml  tinystories_clean.yaml  tinystories_clean_bpe2048.yaml  wikitext103.yaml
configs/experiments/: channel_smoke.yaml  smoke.yaml  tier0_softmax_confirmatory.yaml  tier0_softmax_pilot.yaml  tier0_softmax_smoke.yaml  tier1_micro.yaml  tier2_small.yaml  tier3_medium.yaml  tier4_public.yaml
configs/model_zoo/: micro_confirmatory.yaml  micro_pilot.yaml  public_models.yaml  text_tier2_pilot.yaml
configs/models/: inverse_micro.yaml  inverse_small.yaml  property_small.yaml  property_smoke.yaml
configs/tokenizers/: tinystories_bpe_2048.yaml
configs/tracking/: aim_local.yaml  aim_remote.yaml  jsonl.yaml
docs/: AIM.md  ARCHITECTURE.md  COMPUTE.md  DATASETS.md  EXPERIMENT_DESIGN.md  INTERPRETABILITY.md  MODEL_MATRIX.md  PREREGISTRATION_TEMPLATE.md  REFERENCES.md  REPRODUCIBILITY.md  RESEARCH_SPECIFICATION.md  RUNBOOK.md  SECURITY_AND_ETHICS.md  STATISTICAL_ANALYSIS_PLAN.md
infra/aim/: Dockerfile  README.md  docker-compose.yml
infra/aws/: README.md  job-definition.template.json  submit_batch.py  submitbatch.py
infra/slurm/: README.md  (+3 more)
notebooks/: README.md  inspect_results.ipynb
reports/: TIER0_ANALYSIS.md  VERIFICATION.md  cli-help.txt  cli-traces-help.txt  cli-train-help.txt  cli-zoo-help.txt  final-channel-suite-console.txt  final-smoke-console.txt  final-tier0-console.txt  mypy.txt  pytest.txt  verification.json
requirements/: README.md
scripts/: aggregate_results.py  aggregateresults.py  analyzetier0.py  freeze_study.py  freezestudy.py  packagerepo.sh  preparepublicsuite.sh  runsmoke.sh  validate_artifacts.py  validateartifacts.py
tests/: conftest.py  test_active.py  test_analytic_softmax.py  test_configs_and_public.py  test_interventions.py  test_inverse.py  test_manifest.py  test_micro_symmetry.py  test_observations.py  test_planning.py  test_property.py  test_smoke.py  test_stats.py  test_trace_store.py  test_tracking.py  test_weight_space.py  testactive.py  testanalyticsoftmax.py  testconfigsandpublic.py  testinterventions.py  testinverse.py  testmanifest.py  testmicrosymmetry.py  testobservations.py  testplanning.py  testproperty.py  testsmoke.py  teststats.py  testtracestore.py  testtracking.py  testweightspace.py
(+68 files in other folders)
